--- a/pom.xml
+++ b/pom.xml
@@ -42,8 +42,8 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springdoc</groupId>
-			<artifactId>springdoc-openapi-ui</artifactId>
-			<version>1.7.0</version>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.8.6</version>
 		</dependency>
 		<dependency>
 			<groupId>javax.validation</groupId>
@@ -74,7 +74,10 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-				<version>3.4.3</version>
+				<version>3.4.5</version>
+				<configuration>
+					<mainClass>com.empik.complaintsmanagement.ComplaintsManagementServiceApplication</mainClass>
+				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>com.diffplug.spotless</groupId>
@@ -100,12 +103,9 @@
 							<generatorName>spring</generatorName>
 							<apiPackage>com.empik.complaintsmanagement.api</apiPackage>
 							<modelPackage>com.empik.complaintsmanagement.openapi.model</modelPackage>
-							<supportingFilesToGenerate>ApiUtil.java</supportingFilesToGenerate>
-							<typeMappings>
-								<typeMapping>DateTime=Instant</typeMapping>
-							</typeMappings>
 							<configOptions>
-								<delegatePattern>true</delegatePattern>
+								<java8>true</java8>
+								<interfaceOnly>true</interfaceOnly>
 							</configOptions>
 						</configuration>
 					</execution>
