Introduce H2 database with initialized Complaint table.

--- a/src/main/resources/api/definitions/complaint.yml
+++ b/src/main/resources/api/definitions/complaint.yml
@@ -2,6 +2,7 @@ Complaint:
   summary: Complaint object
   type: object
   properties:
+#    TODO: Define properties length constraints
     id:
       type: integer
     productId:
@@ -14,7 +15,7 @@ Complaint:
     creationUser:
       type: string
       minLength: 1
-#   TODO: Define country type and restrictions correctly.
+#   TODO: Define country, counter types and restrictions correctly.
   required:
     - id
     - productId
